--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@babylon/graphql-js",
+  "name": "graphql",
   "version": "14.5.8",
   "description": "A Query Language and Runtime which can target any service.",
   "license": "MIT",
